fixed input jump5

--- a/src/containers/Auth/Auth.module.css
+++ b/src/containers/Auth/Auth.module.css
@@ -19,8 +19,3 @@
 .Auth h1 {
     color:  #AA381E;
 }
-
-.Auth form {
-    display: flex;
-    flex-direction: column;
-}
